--- a/app/static/index.html
+++ b/app/static/index.html
@@ -480,6 +480,10 @@
             align-items: center;
             justify-content: center;
             padding: 10px 20px;
+            margin-right: 10px;
+        }
+
+        #planet-inhabitance-image img {
         }
 
         #score-wrapper {
