Add orc character image

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -788,6 +788,8 @@
                             </div>
                             <div class="col">
                                 <div class="team">
+                                        <div class="team-name" style="color: #0000ff">Gnarf</div>
+                                        <img src="assets/orc.gif" />
                                 </div>
                             </div>
                         </div>
