Add Skull character

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -841,8 +841,10 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <div class="team">
-                                </div>
+                                    <div class="team">
+                                        <div class="team-name" style="color: #ff00ff">Gnarf</div>
+                                        <img src="assets/skull.gif" />
+                                    </div>
                             </div>
                             <div class="col">
                                 <div class="team">
