--- a/app/static/index.html
+++ b/app/static/index.html
@@ -834,7 +834,7 @@
                             </div>
                             <div class="col">
                                 <div class="team">
-                                        <div class="team-name" style="color: #0000ff">Gnarf</div>
+                                        <div class="team-name" style="color: #ff0000">Flubber</div>
                                         <img src="assets/orc.gif" />
                                 </div>
                             </div>
@@ -842,7 +842,7 @@
                         <div class="row">
                             <div class="col">
                                     <div class="team">
-                                        <div class="team-name" style="color: #ff00ff">Gnarf</div>
+                                        <div class="team-name" style="color: #ff0000">Skully</div>
                                         <img src="assets/skull.gif" />
                                     </div>
                             </div>
