Icons for torpedos and mines

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1066,7 +1066,7 @@
                     <button id="item-laser" class="active"><img src="assets/icon-laser.png" /><br />Laser <br /><span
                             id="item-laser-count">-</span></button>
                     <button id="item-torpedo"><img src="assets/icon-torpedo.png" /><br />Torpedo <br /><span id="item-torpedo-count">0</span></button>
-                    <button id="item-mine"><img src="assets/icon-mine.png" /><br />Proximity Mine <br /><span id="item-mine-count">0</span></button>
+                    <button id="item-mine"><img src="assets/icon-mine.png" /><br />Timed Mine <br /><span id="item-mine-count">0</span></button>
                     <button id="item-hot-torpedo"><img src="assets/icon-hot-torpedo.png" /><br />Hot Torpedo <br /><span
                             id="item-hot-torpedo-count">0</span></button>
                     <button id="item-nuke"><img src="assets/icon-nuclear.png" /><br />Neutron Bomb <br /><span id="item-nuke-count">0</span></button>
