--- a/app/static/index.html
+++ b/app/static/index.html
@@ -110,6 +110,10 @@
             background-position: -1px -1px, -1px -1px;
         }
 
+        #minimap > div {
+            pointer-events: none;
+        }
+
         .minimap-ship {
             position: absolute;
             z-index: 100;
